--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,4 +1,4 @@
-<h1 style="text-align: center;">precoge.Predigle.com</h1>
+<h1 style="text-align: center;">precoge.predigle.com</h1>
 
 
 <a (click)="handleLogOut()">Logout</a>
